# c-fuzzy-extractor

./: .gitignore  CMakeLists.txt  README.md
src/: CFuzzyExtractor.c  CFuzzyExtractor.h  main.c  minunit.h
